apps/finance-display/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: finance-display
  namespace: apps
spec:
  parentRefs:
    - name: home
      namespace: traefik
  hostnames:
    - finance-display.reza.network
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: custom-errors
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: lan-vpn-only
      backendRefs:
        - name: finance-display
          port: 8080
